# conditioning-stable-diffusion

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
config/data/: maad_face.yaml
config/evaluation/: maad_face_eval.yaml
config/inference/: ddim_256.yaml  ddpm_256.yaml
config/models/: unet_latent_256.yaml  unet_latent_512.yaml
config/training/: maad_256.yaml
data/: README.md  filter_data.py
data/evaluation/: README.md
docker/: data.Dockerfile  evaluation.Dockerfile  inference.Dockerfile  training.Dockerfile
notebooks/: Stable_Difussion.ipynb  Stable_Difussion_512.ipynb  descargar_datos.ipynb
requirements/: base.txt  data.txt  dev.txt  evaluation.txt  inference.txt  training.txt
scripts/: data.py  evaluate.py  infer.py  train.py
src/: __init__.py
src/data/: __init__.py  constants.py  ingestion.py
src/evaluation/: __init__.py  face_detection.py  io.py  metrics.py  pipeline.py
src/inference/: __init__.py  ddim.py  ddpm.py
src/model/: __init__.py  attention.py  data_loaders.py  diffusion.py  diffusion_utils.py  label_encoder.py  unet.py  vae.py
src/pipeline/: __init__.py  factory.py
src/training/: __init__.py  autocast.py  checkpoints.py  chekpoints.py  ddim_for_training.py  ema.py  schedule.py  train_model.py  train_one_epoch.py
src/utils/: __init__.py  config.py
tests/: test_configs.py
tests/data/: test_ingestion.py
tests/evaluation/: test_face_detection.py  test_io.py  test_pipeline.py
tests/inference/: test_samplers.py
tests/model/: test_diffusion.py  test_label_encoder.py  test_unet.py
(+3 files in other folders)
